* Perform `e.type` before the `"form" in e` check to resolve `:enabled` and `:disabled` dynamic pseudos faster. [Diego Perini]

* Refactor attribute resolver in compileSelector() to avoid unneeded String#replace calls and other operations. [Diego Perini, jddalton]

* Define compile() and setQSA() as private methods in the `DEBUG API` section and ensure exposed byClass(), byName(), and byTag(), return array values. [Diego Perini, jddalton]

* Merge `compatMode` into `isQuirks` to reduce a variable. [Diego Perini] 

* Make all loops use `element` and `elements` variables for better compression and bump datestamp. [Diego Perini, jddalton]

* Replace `NATIVE_SLICE_PROTO` feature test with one from kangax's CFT. [Diego Perini, kangax]

* Avoid infinite loop for non html elements in byName(). [jddalton]

* Tweak byTag(), byName(), byClass(), select_qsa(), client_api(), and `reNameValue` to gain performance. [jddalton]

* Add `[name=...]` to the `RE_SIMPLE_SELECTOR` regexp. [jddalton]

* Ensure byName() returns an array of elements. [jddalton]

* Fix jQuery adapter regression in `even`, `odd`, `eq`, `lt`, and `gt` pseudo selectors. [jddalton]

* Reduce variables used in compileSelector(), replace a compatMode check with `isQuirks` and modify a couple code comments. [jddalton]

* Make compileSelector() ensure element exists before checking nodeType on adjacent sibling selectors. [jddalton]

* Make `UID`'s property name harder to conflict with. [Diego Perini, jddalton]

* Fix `BUGGY_GEBID` feature test. [Diego Perini, jddalton]

* Removed strict check for (even/odd) in the Patterns.spseudos regexp and simplify regexps in the `an+b` processing in compileSelector(). [Diego Perini, jddalton]

* Rename variable `isClassNameLowered` to `isQuirks`. [Diego Perini]

* Fix `RE_BUGGY_QSAPI` class attribute feature test and correct Dojo unit tests. [jddalton]

* Fix regression in compileSelector() and make Patterns.attribute use a non-greedy `.*?`. [jddalton]
